Fixed common ligatures, adjusted letter-spacing

--- a/src/portfolio/pages/_portfolioPage.scss
+++ b/src/portfolio/pages/_portfolioPage.scss
@@ -9,12 +9,18 @@
   background-color: m.$background-color-primary;
   overflow: hidden;
   color: m.$font-color-primary;
-  // Property: [Optional: style, variant, weight], size, line-height, family, fallback (font, font type)
+  // font: [font-style] [font-variant] [font-weight] font-size/line-height font-family;
   font:
-    normal no-common-ligatures proportional-nums 500 1rem / 1.25em 'Helvetica',
-    PT Sans,
+    normal normal 500 1.1rem / 1.25em 'Helvetica',
+    'PT Sans',
     sans-serif;
-  & button {
-    color: m.$font-color-primary;
+  letter-spacing: 0.04rem;
+  & button,
+  & a,
+  & span,
+  & h2 {
+    color: inherit;
+    font: inherit;
+    letter-spacing: inherit;
   }
 }
